Fix z-index order

--- a/static/base.css
+++ b/static/base.css
@@ -44,7 +44,7 @@ a {
     padding: 0 20px;
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 5000;
     background-color: #FFF9F3;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
