--- a/static/style.css
+++ b/static/style.css
@@ -97,7 +97,7 @@
     align-items: center;
     position: relative;
     min-height: 500px;
-    z-index: 9998;
+    z-index: 4000;
 }
 
 /* Decorative Circles */
